plugins {
    id 'java'
    id 'maven-publish'
}

group = 'at.czlabinger'
version = '1.0-SNAPSHOT'
sourceCompatibility = '21'
targetCompatibility = '21'

repositories {
    mavenCentral()
    maven {
        url 'https://projectlombok.org/edge-releases'
    }
}

dependencies {
    // JUnit
    testImplementation platform('org.junit:junit-bom:5.11.0')
    testImplementation 'org.junit.jupiter:junit-jupiter-api'
    testImplementation 'org.junit.jupiter:junit-jupiter-params'

    // Lombok
    implementation 'org.slf4j:slf4j-api:2.0.7'
    implementation 'org.projectlombok:lombok:edge-SNAPSHOT'
    annotationProcessor 'org.projectlombok:lombok:edge-SNAPSHOT'

    // JSON
    implementation 'com.fasterxml.jackson.core:jackson-databind:2.17.0'
}

test {
    useJUnitPlatform()
}

publishing {
    publications {
        mavenJava(MavenPublication) {
            from components.java
        }
    }
}

tasks.withType(JavaCompile) {
    options.compilerArgs += ["--enable-preview"]
}

jar {
    manifest {
        attributes(
                'Main-Class': 'at.czlabinger.Controller',
                'Class-Path': 'lib/'
        )
    }
}
